# fintech-skills

./: README.md  SKILL.md  finance-market-skills  pyproject.toml
agents/: openai.yaml
docs/superpowers/plans/: 2026-07-03-crypto-market-toolkit.md  2026-07-03-finance-market-self-contained-rename.md  2026-07-03-lobehub-installed-skill-runtime.md  2026-07-03-root-skill-layout.md
docs/superpowers/specs/: 2026-07-03-crypto-market-toolkit-design.md  2026-07-03-root-skill-layout-design.md  2026-07-03-self-contained-ccxt-design.md
scripts/: run-tool.sh
skills/crypto-market-toolkit/: SKILL.md
skills/crypto-market-toolkit/agents/: openai.yaml
skills/crypto-market-toolkit/scripts/: run-tool.sh
src/crypto_market_toolkit/: __init__.py  cli.py
src/crypto_market_toolkit/cache/: memory_cache.py
src/crypto_market_toolkit/exchanges/: client.py  registry.py
src/crypto_market_toolkit/indicators/: atr.py  bbands.py  compute.py  macd.py  rsi.py  vwap.py
src/crypto_market_toolkit/market_data/: __init__.py  ohlcv.py  orderbook.py  price.py  ticker.py  trades.py
src/crypto_market_toolkit/scanners/: breakouts.py  top_movers.py  volatility_rank.py  volume_spikes.py
src/crypto_market_toolkit/schemas/: __init__.py
src/finance_market_skills/: __init__.py  cli.py
tests/: test_cli.py  test_compute_indicators.py  test_indicators_atr.py  test_indicators_bbands.py  test_indicators_macd.py  test_indicators_rsi.py  test_indicators_vwap.py  test_response_schema.py  test_scanners_breakouts.py  test_symbol_normalization.py
workspace/scripts/: run-tool.sh
(+18 files in other folders)
