[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-market-toolkit"
version = "0.1.0"
description = "AI-agent friendly crypto market data + indicators toolkit using ccxt"
requires-python = ">=3.11"
dependencies = [
  "ccxt>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
crypto-market-toolkit = "crypto_market_toolkit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
