[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-market-skills"
version = "0.1.0"
description = "AI-agent friendly crypto market data + indicators toolkit using ccxt"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
finance-market-skills = "finance_market_skills.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
